# adventofcode-2

./: README.md
2016/01/: input.txt
2016/02/: input.txt
2016/03/: input.txt
2016/04/: input.txt
2016/06/: input.txt
2016/07/: input.txt
2016/08/: input.txt
2016/09/: input.txt
2016/10/: input.txt
2016/12/: input.txt
2016/15/: input.txt
2016/18/: input.txt
2016/20/: input.txt
2016/21/: input.txt
2016/22/: input.txt
2016/23/: input.txt
2016/24/: input.txt
2016/25/: input.txt
2020/01/: input.txt
2020/02/: input.txt
2020/03/: input.txt
2020/04/: input.txt
2020/05/: input.txt
2020/06/: input.txt
2020/07/: input.txt
2020/08/: input.txt
2020/09/: input.txt
2020/10/: input.txt
2020/11/: input.txt
2020/12/: input.txt
2020/13/: input.txt
2020/14/: input.txt
2020/15/: input.txt
2020/16/: input.txt
2020/17/: input.txt
2020/18/: input.txt
2020/19/: input.txt  p1.py
2020/20/: input.txt
2020/21/: input.txt
2020/22/: input.txt
2020/24/: input.txt
2020/25/: input.txt
2021/01/: input.txt
2021/02/: input.txt
2021/03/: input.txt
2021/04/: input.txt
2021/05/: input.txt
2021/06/: input.txt
2021/07/: input.txt
2021/08/: input.txt
2021/09/: input.txt
2021/10/: input.txt
2021/11/: input.txt
2021/12/: input.txt
2021/13/: input.txt
2021/14/: input.txt
2021/15/: input.txt  p1.py
2021/16/: input.txt
2021/17/: input.txt
2021/18/: input.txt
2022/01/: input.txt
2022/02/: input.txt
2022/12/: 1.py  (+1 more)
2024/14/: input.txt  pyproject.toml
2024/14/src/aoc/: __main__.py  part1.py  part2.py
(+86 files in other folders)
